Avoid whitespace between tags to make sure that all margins are equal

--- a/public/netvis.scss
+++ b/public/netvis.scss
@@ -234,6 +234,7 @@ svg {
       font-size: 0.9em;
       white-space: nowrap;
       box-sizing: content-box;
+      margin-right: 5px;
 
       .delete {
         display: none;
